# teeworlds-InfNext

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
data/languages/: index.json  zh-CL.json  zh-CN.json  zh_CL.json  zh_CN.json
data/maps/: map.json  next_basin.map  next_hill.map  next_jungle.map  next_night.map  next_snow.map  next_snowland.map  next_water.map
data/maps7/: next_hill.map  next_night.map  next_snow.map  next_water.map
data/server_lang/: zh-cn.json
datasrc/: content.py  network.py
other/icons/: Teeworlds.icns  Teeworlds_srv.icns
other/translations/: infnext.pot
other/translations/zh-CL/: infnext.po
other/translations/zh-CN/: infnext.po
other/translations/zh-cn/: localize.mo  localize.po
other/translations/zh_CL/: infnext.po
other/translations/zh_CN/: infnext.po
scripts/: translation-python3.py
src/base/: math.cpp  math.h  system.cpp  system.h  vmath.h
src/engine/: console.h  engine.h  graphics.h  map.h  server.h  storage.h
src/engine/server/: crypt.cpp  crypt.h  mapconverter.cpp  mapconverter.h  mapconverter6.cpp  mapconverter7.cpp  register.cpp  server.cpp  server.h
src/engine/shared/: config.cpp  config.h  config_variables.h  console.cpp  console.h  demo.cpp  demo.h  engine.cpp  filecollection.cpp  filecollection.h  http.cpp  http.h  jobs.cpp  json.cpp  json.h  map.cpp  memheap.cpp  network.h  network_conn.cpp  network_server.cpp  protocol.h  storage.cpp
src/game/: collision.cpp  collision.h  gamecore.cpp  gamecore.h  layers.cpp  layers.h  mapitems.h  tuning.h  variables.h  version.h
src/game/server/: class.cpp  class.h  entity.cpp  entity.h  eventhandler.cpp  eventhandler.h  gamecontext.cpp  gamecontext.h  gamecontroller.cpp  gamecontroller.h  gameworld.cpp  gameworld.h  infdefine.h  player.cpp  player.h  weapon.cpp  weapon.h
src/game/server/classes/: boomer.cpp  boomer.h  hunter.cpp  hunter.h  looper.cpp  looper.h  medic.cpp  medic.h  smoker.cpp  smoker.h  sniper.cpp  sniper.h
src/game/server/entities/: character.cpp  character.h
src/game/server/gamemodes/: class-define.h  infnext.cpp  infnext.h
src/game/server/weapon-entities/: laser.cpp  laser.h  projectile.cpp
src/game/server/weapons/: boomer-hammer.cpp  boomer-hammer.h  grenade.cpp  grenade.h  gun.cpp  gun.h  hammer.h  infect-hammer.cpp  infect-hammer.h  looper-grenade.cpp  looper-grenade.h  looper-rifle.cpp  looper-rifle.h  medic-hammer.cpp  medic-hammer.h  medic-shotgun.cpp  medic-shotgun.h  rifle.cpp  rifle.h  shotgun.cpp  shotgun.h  sniper-rifle.cpp  sniper-rifle.h
src/infnext/: class-define.h  class.cpp  class.h  classes.cpp  classes.h  config.h  effect.cpp  effect.h  infdefine.h  weapon.cpp  weapon.h
src/infnext/classes/: boomer.cpp  boomer.h  captain.cpp  captain.h  hunter.cpp  hunter.h  looper.cpp  looper.h  medic.cpp  medic.h  queen.cpp  queen.h  smoker.cpp  smoker.h  sniper.cpp  sniper.h
src/infnext/effects/: dehydration.cpp  dehydration.h
src/infnext/entities/: laser.cpp  laser.h  projectile.h  sea-water.cpp  sea-water.h
src/infnext/weapon-entities/: laser.h
src/infnext/weapons/: boomer-hammer.cpp  boomer-hammer.h  captain-rifle.cpp  captain-rifle.h  grenade.cpp  grenade.h  gun.cpp  gun.h  hammer.cpp  hammer.h  infect-hammer.cpp  infect-hammer.h  looper-grenade.cpp  looper-grenade.h  looper-rifle.cpp  looper-rifle.h  medic-hammer.cpp  medic-hammer.h  medic-shotgun.cpp  medic-shotgun.h  rifle.cpp  rifle.h  shotgun.cpp  shotgun.h  sniper-rifle.cpp  sniper-rifle.h
src/mastersrv/: mastersrv.cpp
src/teeuniverses/components/: localization.cpp  localization.h
src/teeuniverses/system/: string.h
tools/: convert_map.py  generate-po.py  generate.py  generate_po.py  localization.py  map_convert_07
